base/oauth2-proxy/oauth2-proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: oauth2-proxy
  name: oauth2-proxy-deployment
  
spec:
  replicas: 1
  selector:
    matchLabels:
      application: oauth2-proxy
  template:
    metadata:
      labels:
        application: oauth2-proxy
    spec:
      containers:
      # - --pass-access-token=true
      # - --cookie-name=_proxycookie
      # pour azure --session-cookie-minimal
      # Adapter les valeurs pour le tenant (xxxxxxxx-xxxx-xxx-xxxx-xxxxxxxx et domaine caas.fr)
      - args:
        - --provider=azure
        - --azure-tenant=xxxxxxxx-xxxx-xxx-xxxx-xxxxxxxx
        - --cookie-domain="caas.fr"
        - --email-domain=*
        - --http-address=0.0.0.0:4180
        - --oidc-issuer-url=https://login.microsoftonline.com/xxxxxxxx-xxxx-xxx-xxxx-xxxxxxxx/v2.0
        - --whitelist-domain=.caas.fr
        - --skip-provider-button=true
        - --upstream=file:///dev/null
        #- --set-authorization-header=true
        - --session-cookie-minimal=true
        name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
